PlatformService/K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name:  command-depl
spec:
   replicas: 1    
   selector:
      matchLabels:
        app: commandservice
   template:     
      metadata: 
        labels:
         app: commandservice
      spec:     
        containers:
           - name:  platfromservice
             image: 6895mahfuz/commandservice:latest
---
apiVersion: apps/v1
kind: Service
metadata:
   name:  commands-clusterip-srv
spec:
   type: ClusterIP
   selector:
        app: commandservice
   ports:
    - name:  commandservice
      port:  80
      protocol: TCP   
      targetPort: 80
