PlatformService/K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name:  platform-depl
spec:
   replicas: 1    
   selector:
      matchLabels:
        app: platformservice
   template:     
      metadata: 
        labels:
         app: platformservice
      spec:     
        containers:
           - name:  platfromservice
             image: 6895mahfuz/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
   name:  platforms-clusterip-srv
spec:
   type: ClusterIP
   selector:
        app: platformservice
   ports:
    - name:  platformservice
      port:  80
      protocol: TCP   
      targetPort: 80     
    - name:  platformgrpc
      port:  777
      protocol: TCP   
      targetPort: 777
